--- a/elm/src/main/resources/application.yml
+++ b/elm/src/main/resources/application.yml
@@ -7,8 +7,23 @@ spring:
     username: root
     password: Mi20030610.
     url: jdbc:mysql://localhost:3306/elm
+  web:
+    resources:
+      static-locations: file:H:\\elmImg
+  mvc:
+    static-path-pattern: /static/**
 
+  resources:
+    static-locations: classpath:/
+
+logging:
+  level:
+    root: warn
+    com.kaven.mybatisplus.dao: trace
+  pattern:
+    console: '%p%m%n'
 
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
+
