--- a/elm_qd/package.json
+++ b/elm_qd/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.5.1",
     "bootstrap": "5.3.0-alpha1",
+    "bootstrap-icons": "^1.11.1",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.4.1",
     "jquery": "^3.7.1",
